# image-quality

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  TODO.md  docker-compose.yml
.claude/: iqa-plan.md  settings.local.json
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260419_0001_initial_schema.py
backend/app/: main.py
backend/app/api/: assessments.py  filesystem.py  health.py  images.py  scans.py  settings_api.py
backend/app/core/: auth.py  config.py  logging.py  paths.py  url_validator.py
backend/app/db/: migrations.py  session.py
backend/app/db/models/: __init__.py  assessment.py  scan.py  setting.py
backend/app/services/: assessment_engine.py  file_manager.py  lm_studio_client.py  rubric.py
docs/plans/: 2026-02-28-image-quality-assessor-design.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  theme.ts
frontend/src/api/: assessments.ts  client.ts  filesystem.ts  scans.ts  settings.ts
frontend/src/components/: FolderPicker.tsx  NavBar.tsx  ScanTable.tsx  ScoreChip.tsx
frontend/src/pages/: Dashboard.tsx  History.tsx  ImageDetail.tsx  ScanView.tsx  Settings.tsx
