[project]
name = "iqa-backend"
version = "1.0.0"
description = "Image Quality Assessor backend — FastAPI service that grades AI-generated images via a vision LLM and auto-sorts them."
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.27",
    "httpx>=0.25.0",
    "aiofiles>=23.0.0",
    "Pillow>=10.0.0",
    "alembic>=1.13.0",
]

[tool.uv]
package = false
